[package]
name = "girage"
description = "[ALPHA STATE] Graphical interface for a simple, secure, and modern encryption tool."
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
gtk = "0.7"
relm = "0.18"
relm-derive = "0.18"
tar = "0.4"

[dependencies.age]
git = "https://github.com/str4d/rage"
rev = "a0c334fd7840725555f3004a48ddb00dcdbcf053"
default-features = false
