[package]
name = "girage"
description = "[ALPHA STATE] Graphical interface for a simple, secure, and modern encryption tool."
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
age = { version = "0.1", default-features = false }
gtk = "0.7"
relm = "0.18"
relm-derive = "0.18"
secrecy = "0.5"
tar = "0.4"
